Elevando el formulario para subir imágenes a través del index

--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -73,8 +73,8 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <br>
-                                        <input id="album_id" name="album_id" type="hidden" value="{{ id_album }}">
-                                        <input type="file" class="filestyle" data-buttonText="Seleccione Foto" data-iconName="fa fa-inbox" data-size="md">
+                                        <input name="album" type="hidden" value="{{ id_album }}">
+                                        <input name="url" type="file" class="filestyle" data-buttonText="Seleccione Foto" data-iconName="fa fa-inbox" data-size="md">
                                     </div>
                                 </div>
                                 <br>
