--- a/diad/static/css/theme.css
+++ b/diad/static/css/theme.css
@@ -12,6 +12,7 @@
 
 body {
   background-color:#e0e0e0;
+  color: rgba(0,0,0,.5);
   -webkit-font-smoothing: antialiased;
   font: normal 14px Roboto,arial,sans-serif;
 }
