Detallito para poder acceder al hashtag de ese día

--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -135,7 +135,7 @@
                                     {% endfor %}
                                 </div>
                                 <div class="panel-body">
-                                    <p><a href="http://twitter.com/">#DiadelUniformeScout</a></p>
+                                    <p><a href="https://twitter.com/hashtag/DiadelUniformeScout">#DiadelUniformeScout</a></p>
                                 </div>
                             </div>
                         </div>
