--- a/diad/templates/album.html
+++ b/diad/templates/album.html
@@ -62,7 +62,7 @@
 
         <section class="container" id="main">
             <section id="gallery">
-                {% if photos.len == 0 %}
+                {% if all == 0 %}
                 <div class="row">
                     <div class="col-md-12 col-sm-6">
                         <div class="panel panel-default">
@@ -128,7 +128,7 @@
                 <div class="col-md-12" id="load">
                     <div class="panel panel-default">
                         <div class="panel-body text-center">
-                            <a href="pagina/" id="siguiente"><i class="fa fa-angle-double-down"></i> Ver más</a>
+                            <a href="/pagina/" id="siguiente"><i class="fa fa-angle-double-down"></i> Ver más</a>
                         </div>
                     </div>
                 </div>
