--- a/diad/static/css/countdown.css
+++ b/diad/static/css/countdown.css
@@ -5,7 +5,7 @@ MAIN STYLE
     font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
-    color: rgba(0, 0, 0, .3);
+    color: rgba(0, 0, 0, .5);
     text-align: center;
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
@@ -15,7 +15,7 @@ MAIN STYLE
 #countdown h1, #countdown h2, #countdown h3, #countdown h4, #countdown h5, #countdownh6 {
     font-family: "Raleway";
     font-weight: 300;
-    color: rgba(0, 0, 0, .3);
+    color: rgba(0, 0, 0, .5);
 }
 a:hover, a:focus {
     -webkit-transition-duration: 0.4s;
@@ -39,7 +39,7 @@ HEADER
     text-align: center;
     width: 130px;
     border-radius: 50%;
-    border: 4px solid rgba(0, 0, 0, .3);
+    border: 4px solid rgba(0, 0, 0, .5);
 }
 .timer_box h1{
     font-size: 48px;
@@ -50,12 +50,18 @@ HEADER
 }
 .timer_box p{ margin-top: 0px;}
 
+.movil {display: none;}
+
 /******************************************************************************************************************************
 RESPONSIVE
 *******************************************************************************************************************************/
 @media only screen and (max-width: 520px) {
+    .movil {display: block;}
+    .desktop {display: none;}
+    #countdown h1 {font-size: 26px; }
     .timer_box {
         margin: 0 12px 12px 0;
+        border: none;
     }
 
     @media only screen and (max-width: 740px) {
