--- a/diad/templates/album.html
+++ b/diad/templates/album.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <link href="{% static "img/favicon.ico" %}" rel="shortcut icon" />
 
         <title>Día de Uniforme</title>
 
