--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -2,10 +2,12 @@
 {% load static from staticfiles %}
 <html lang="es" xmlns="http://www.w3.org/1999/html">
     <head>
-        <meta charset="<?php echo APP_CHARSET ?>">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
+
+        <link href="{% static "img/favicon.ico" %}" rel="shortcut icon" />
 
         <title>Día de Uniforme</title>
 
@@ -124,6 +126,23 @@
                                     Baden Powell (1857-1941)
                                 </footer>
                             </blockquote>
+
+                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://uniforme.scoutsfalcon.org" data-text="Celebrando el orgullo de ser Scout con" data-via="ScoutsFalcon" data-hashtags="DiadelUniformeScout">Tweet</a>
+                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+                            <script src="https://apis.google.com/js/platform.js" async defer></script>
+                            <g:plusone></g:plusone>
+
+                            <div id="fb-root"></div>
+                            <script>(function(d, s, id) {
+                              var js, fjs = d.getElementsByTagName(s)[0];
+                              if (d.getElementById(id)) return;
+                              js = d.createElement(s); js.id = id;
+                              js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3&appId=213890375309392";
+                              fjs.parentNode.insertBefore(js, fjs);
+                            }(document, 'script', 'facebook-jssdk'));</script>
+
+                            <div class="fb-like" data-href="http://uniforme.scoutsfalcon.org/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                         </div>
                     </div>
                 </div>
