Terminando la autenticación Twitter

--- a/diad/templates/twitter_token.html
+++ b/diad/templates/twitter_token.html
@@ -2,10 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Facebook Auth</title>
+    <title>Twitter Auth</title>
 </head>
 <body>
-<h2>Autenticación para el API Facebook</h2>
+<h2>Autenticación para el API Twitter</h2>
 {% if url %}
     <a href="{{ url }}">Autenticar</a>
 {% else %}
