--- a/diad/templates/footer.html
+++ b/diad/templates/footer.html
@@ -6,7 +6,7 @@
             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.es"><img src="{% static "img/creative_commons/nc.png" %}" title="NoComercial" alt="NoComercial" /></a>
             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.es"><img src="{% static "img/creative_commons/sa.png" %}" title="CompartirIgual" alt="CompartirIgual" /></a>
             <p>
-                Desarrollado por <a href="https://github.com/scoutsfalcon">ScoutsFalcon</a><br>2013 - {{ actual }}
+                Desarrollado por <a href="https://github.com/Icterus">Icterus</a><br>2013 - {{ actual }}
             </p>
         </footer>
 
