Corrigiendo el link del logo

--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -33,7 +33,7 @@
         <div class="navbar navbar-fixed-top header">
             <div class="col-md-12" id="col-collapse1">
                   <div class="navbar-header">
-                    <a href="#" class="navbar-brand"><img src="{% static "img/logo_es.png" %}" /></a>
+                    <a href="/" class="navbar-brand"><img src="{% static "img/logo_es.png" %}" /></a>
                   </div>
               </div>
         </div>
