Corrigiendo el detalle del contador regresivo

--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -116,7 +116,7 @@
                 <div class="col-md-6 ">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h4>#DiaUniformeScout</h4>
+                            <h4>#DiadelUniformeScout</h4>
                         </div>
                         <div class="panel-body">
                             <blockquote>
@@ -156,7 +156,7 @@
                             <div class="panel-body">
                                 <header>
                                     <!-- HEADLINE -->
-                                    <h1 data-animated="GoIn"><b>#DiaUniformeScout</b> en...</h1>
+                                    <h1 data-animated="GoIn"><b>#DiadelUniformeScout</b> en...</h1>
                                 </header>
                                 <!-- START TIMER -->
                                 <div id="timer" data-animated="FadeIn">
