--- a/diad/templates/album.html
+++ b/diad/templates/album.html
@@ -6,8 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="description" content="Aplicación Web para celebrar el día del uniforme, posteando en redes sociales la galéria de imagénes de nuestros miembros">
+        <meta name="keywords" content="DiadelUniformeScout, uniforme, scout, uniforme scout, scout de venezuela, región falcón, distrito paraguaná, paraguaná">
         <link href="{% static "img/favicon.ico" %}" rel="shortcut icon" />
-
         <title>Día de Uniforme</title>
 
         <!-- <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"> -->
