--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -129,7 +129,7 @@
                                 </footer>
                             </blockquote>
 
-                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://uniforme.scoutsfalcon.org" data-text="Celebrando el orgullo de ser Scout con" data-via="ScoutsFalcon" data-hashtags="DiadelUniformeScout">Tweet</a>
+                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://uniforme.scout.org.ve" data-text="Celebrando el orgullo de ser Scout con" data-via="ScoutsFalcon" data-hashtags="DiadelUniformeScout">Tweet</a>
                             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
                             <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -144,7 +144,7 @@
                               fjs.parentNode.insertBefore(js, fjs);
                             }(document, 'script', 'facebook-jssdk'));</script>
 
-                            <div class="fb-like" data-href="http://uniforme.scoutsfalcon.org/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                            <div class="fb-like" data-href="http://uniforme.scout.org.ve/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
                         </div>
                     </div>
                 </div>
