--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -6,8 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="description" content="Aplicación Web para celebrar el día del uniforme, posteando en redes sociales la galéria de imagénes de nuestros miembros">
+        <meta name="description" content="Aplicación Web para celebrar el día del uniforme, posteando en redes sociales la galería de imagénes de nuestros miembros">
         <meta name="keywords" content="DiadelUniformeScout, uniforme, scout, uniforme scout, scout de venezuela, región falcón, distrito paraguaná, paraguaná">
+
+        <meta property="og:title" content="Día del Uniforme Scout"/>
+        <meta property="og:type" content="scout"/>
+        <meta property="og:url" content="http://uniforme.scout.org.ve/"/>
+        <meta property="og:image" content="http://uniforme.scout.org.ve/static/img/BadenPowell.gif"/>
+        <meta property="og:site_name" content="Día del Uniforme Scout"/>
+        <meta property="og:description"
+              content="Aplicación Web para celebrar el día del
+                       uniforme, posteando en redes sociales la
+                       galería de imagénes de nuestros miembros."/>
 
         <link href="{% static "img/favicon.ico" %}" rel="shortcut icon" />
 
