--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -9,10 +9,11 @@
         <meta name="description" content="Aplicación Web para celebrar el día del uniforme, posteando en redes sociales la galería de imagénes de nuestros miembros">
         <meta name="keywords" content="DiadelUniformeScout, uniforme, scout, uniforme scout, scout de venezuela, región falcón, distrito paraguaná, paraguaná">
 
+        <meta property="fb:app_id" content="213890375309392"/>
         <meta property="og:title" content="Día del Uniforme Scout"/>
         <meta property="og:type" content="scout"/>
         <meta property="og:url" content="http://uniforme.scout.org.ve/"/>
-        <meta property="og:image" content="http://uniforme.scout.org.ve/static/img/BadenPowell.gif"/>
+        <meta property="og:image" content="http://res.cloudinary.com/icterus/image/upload/c_scale,w_100/v1495572992/diadeluniforme/BadenPowell.jpg"/>
         <meta property="og:site_name" content="Día del Uniforme Scout"/>
         <meta property="og:description"
               content="Aplicación Web para celebrar el día del
