Actualizando el botón de facebook

--- a/diad/templates/index.html
+++ b/diad/templates/index.html
@@ -11,10 +11,8 @@
 
         <meta property="fb:app_id" content="213890375309392"/>
         <meta property="og:title" content="Día del Uniforme Scout"/>
-        <!--
-          <meta property="og:type" content="scout"/>
-          <meta property="og:image" content="http://res.cloudinary.com/icterus/image/upload/c_scale,w_100/v1495572992/diadeluniforme/BadenPowell.jpg"/>
-        -->
+        <meta property="og:type" content="website"/>
+        <meta property="og:image" content="http://res.cloudinary.com/icterus/image/upload/c_scale,w_100/v1495572992/diadeluniforme/BadenPowell.jpg"/>
         <meta property="og:url" content="http://uniforme.scout.org.ve/"/>
         <meta property="og:site_name" content="Día del Uniforme Scout"/>
         <meta property="og:description"
@@ -153,11 +151,16 @@
                               var js, fjs = d.getElementsByTagName(s)[0];
                               if (d.getElementById(id)) return;
                               js = d.createElement(s); js.id = id;
-                              js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3&appId=213890375309392";
+                              js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.9&appId=808557672591789";
                               fjs.parentNode.insertBefore(js, fjs);
                             }(document, 'script', 'facebook-jssdk'));</script>
 
-                            <div class="fb-like" data-href="http://uniforme.scout.org.ve/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                            <div class="fb-like" data-href="http://uniforme.scout.org.ve/" 
+                              data-layout="button_count"
+                              data-action="like"
+                              data-size="small"
+                              data-show-faces="true"
+                              data-share="true"></div>
                         </div>
                     </div>
                 </div>
